# exitlane

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
backend/: pyproject.toml
backend/exitlane/: __init__.py  cli.py  config.py  core.py  events.py  html.py  main.py  proxy.py  settings.py
backend/exitlane/providers/: base.py  nordvpn.py  registry.py
backend/exitlane/services/: auth_security.py  credentials.py  dashboard.py  diagnostics.py  killswitch.py  network_security.py  vpn_operations.py  vpn_selection.py  wireguard.py
backend/exitlane/static/: app.js  index.html  style.css
backend/exitlane/static/icons/: site.webmanifest
backend/exitlane/static/js/: activity-format.js  activity.js  api.js  app.js  auth.js  config.js  country-format.js  dashboard-format.js  dashboard-polling.js  dashboard-refresh-state.js  dashboard.js  finish.js  i18n.js  icons.js  lifecycle.js  mfa-state.js  navigation.js  notifications.js  password-validation.js  provider-management.js  provider.js  providers.js  (+9 more)
backend/tests/: test_auth.py  test_auth_security.py  test_credentials_management.py  test_dashboard.py  test_events.py  test_html.py  test_killswitch.py  test_network_security.py  test_parser.py  test_provider_abstraction.py  test_provider_actions.py  test_provider_authentication_guards.py  test_security.py  test_settings.py  test_systemd_hardening.py  test_vpn_connect.py  test_vpn_operations.py  test_vpn_selection.py  test_wireguard_configuration.py
backend/tests/fixtures/: index_contract.json
(+81 files in other folders)
