[build-system]
requires=["hatchling>=1.25"]
build-backend="hatchling.build"

[project]
name="exitlane"
version="0.1.0a1"
description="Smart egress for every network"
requires-python=">=3.11"
dependencies=["fastapi>=0.115,<1","uvicorn[standard]>=0.34,<1","pydantic>=2.10,<3","python-multipart>=0.0.20,<1"]

[project.optional-dependencies]
dev=["httpx>=0.28,<1","pytest>=8.3,<9","ruff>=0.11,<1"]

[tool.hatch.build.targets.wheel]
packages=["exitlane"]

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.ruff]
line-length=100
target-version="py311"
